# finlab

./: .env.example  .gitignore  main.py  pyproject.toml
agents/: exemplo-1.py  exemplo-2.py  exemplo-3.py  exemplo-4.py  workflows-1.py
api/: main.py
api/config/: prompts.py  settings.py
api/models/: rag.py  search.py
api/routers/: rag.py  search.py
api/services/: embeddings.py  rag.py  search.py
ingestion/: AAPL_10-K_1A_temp.md  create_collection.py  ingestion.py  test_query.py
ingestion/utils/: edgar_client.py  semantic_chunker.py
